# internal/service/content/types.go
@@ -1,8 +1,0 @@
-package content
-
-import "github.com/SergeyBogomolovv/fitflow/internal/domain"
-
-type CreatePostInput struct {
-	Content  string
-	Audience domain.UserLvl
-}
